fixed text overflow on sm screens about.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -660,6 +660,13 @@ input[type=submit] {
 		font-size: 15px;
 		letter-spacing: 5px;
 	}
+    
+    #about img{
+	object-fit: cover;
+	position: relative;
+    width: 100%;
+    height:900px;
+}
 	/* Fixes a bootstrap padding and margin bug */
 	.row {
 		padding: 0;
